--- a/src/main/resources/teleport.yml
+++ b/src/main/resources/teleport.yml
@@ -1,5 +1,5 @@
 max-x: 1000
 max-z: 1000
 
-message: "&aTeleporting..."
-check: "&cChecking for safe location..."
+message: "&6Teleporting..."
+check: "&eChecking for a safe location..."
