--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -731,3 +731,6 @@ messages:
 
 chat-format: "%rank% %player% %message%"
 chat-format-team: "%team% %rank% %player% %message%"
+
+death:
+  message: "&c%player% was slained by %killer%"
