--- a/src/main/resources/teamsettings.yml
+++ b/src/main/resources/teamsettings.yml
@@ -31,7 +31,7 @@ messages:
   deposit-failed: "&cFailed to deposit %amount% to the team."
   list: "&eTeam&7: &f%team% &eBalance&7: &f%balance%" # it will be in column
   list-failed: "&cNone"
-  top: "&f[&e%team_number%&f] &e%team_name% &7: &e%team_balance%"
+  top: "&7%team_number%. &c%team_name% &e- &7%team_balance%"
   top-failed: "&cNone"
 
 wrong-usage:
